@@ -52,3 +52,7 @@ def refresh():
 
 def editfollow(channel_id, display_name):
     return update_container(i18n('toggle_follow'), {'mode': MODES.EDITFOLLOW, 'channel_id': channel_id, 'channel_name': display_name})
+
+
+def editblock(target_id, display_name):
+    return update_container(i18n('toggle_block'), {'mode': MODES.EDITBLOCK, 'target_id': target_id, 'name': display_name})
